--- a/public/404.html
+++ b/public/404.html
@@ -281,7 +281,7 @@
   <div class="px-6 py-20 w-full lg:w-[580px] mx-auto prose dark:prose-invert h-fit prose-img:mx-auto">
     <br><br>    
     <h1>404 - Page not found! 😱</h1>
-    <img src="/static/images/404.png">
+    <img src="img/404/404.png">
     <p>  
         It looks like you're lost. No worries!
         <br>
