--- a/public/verbing/index.html
+++ b/public/verbing/index.html
@@ -308,7 +308,7 @@
 <h2 id="-working">🏢 Working</h2>
 <p>I&rsquo;m enjoying my hiatus! Joke, indeed! I am currently in a career transition phase, and I am in the process of changing my job title to coder. I am also looking for a job as a junior developer.</p>
 <h2 id="-learning">🤓 Learning</h2>
-<p>Nowadays, I am following <a href="https://www.freecodecamp.org/"  target="_blank" rel="noopener" >freecodecamp</a>&rsquo;s learning path (curriculum) to learn programming and coding. And last but not least, also learning Deutsch and Português Brasileiro at Duolingo.</p>
+<p>Nowadays, I am following <a href="https://www.freecodecamp.org/agrogur"  target="_blank" rel="noopener" >freecodecamp</a>&rsquo;s learning path (curriculum) to learn programming and coding. And last but not least, also learning Deutsch and Português Brasileiro at <a href="https://www.duolingo.com/profile/agrogur"  target="_blank" rel="noopener" >Duolingo</a>.</p>
 <h2 id="--i-am-joining-the-thread-now">🧵  I am joining the thread now:</h2>
 <p><em>Have you ever heard of something called &lsquo;scrobbling&rsquo;? It&rsquo;s one of my favorite things on the internet because it&rsquo;s so easy to use and keep track of your activities. My interest in this concept began when I discovered last.fm, where I could record the music I was listening to. While I was wondering if there was a similar platform for tracking movies and TV series, I stumbled upon trakt.tv. By the way, I explored several websites while looking for something similar for books. Although Goodreads doesn&rsquo;t quite match the level of the others, it serves its purpose for now.</em></p>
 <h2 id="-reading">📚 Reading:</h2>
